--- a/FreeMi.UI/Properties/Resources.resx
+++ b/FreeMi.UI/Properties/Resources.resx
@@ -118,52 +118,52 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AdvancedParameters" xml:space="preserve">
-    <value>Paramètres avancés</value>
+    <value>Advanced Settings</value>
   </data>
   <data name="BufferSize" xml:space="preserve">
-    <value>Taille du buffer (en kilo-octets)</value>
+    <value>Buffer Size (in kilbytes)</value>
   </data>
   <data name="ByDefault" xml:space="preserve">
-    <value>par défaut</value>
+    <value>By Default</value>
   </data>
   <data name="CancelChanges" xml:space="preserve">
-    <value>Annuler les modifications</value>
+    <value>Cancel Changes</value>
   </data>
   <data name="CheckNewVersionAvailableAtStartup" xml:space="preserve">
-    <value>Vérifier si une nouvelle version est disponible au démarrage de l'application</value>
+    <value>Check For New Version Available At Startup</value>
   </data>
   <data name="CustomFriendlyName" xml:space="preserve">
-    <value>Nom personnalisé pour le serveur</value>
+    <value>Friendly Name For The Server</value>
   </data>
   <data name="Folders" xml:space="preserve">
-    <value>Dossiers</value>
+    <value>Folders</value>
   </data>
   <data name="FreeboxV5" xml:space="preserve">
     <value>Freebox V5</value>
   </data>
   <data name="FreeboxV6OrOtherUPnPClient" xml:space="preserve">
-    <value>Freebox V6 (ou autre client UPnP)</value>
+    <value>Freebox V6 (or other UPnP client)</value>
   </data>
   <data name="PressEnterToQuit" xml:space="preserve">
-    <value>Appuyez sur &lt;Entrée&gt; pour quitter</value>
+    <value>Press Enter To Quit</value>
   </data>
   <data name="RunAtWindowsStartup" xml:space="preserve">
-    <value>Lancer au démarrage de Windows</value>
+    <value>Run At Windows Startup</value>
   </data>
   <data name="Save" xml:space="preserve">
-    <value>Enregistrer</value>
+    <value>Save</value>
   </data>
   <data name="TCPPort" xml:space="preserve">
-    <value>Port TCP (0 = port dynamique)</value>
+    <value>Port TCP (0 = dynamic port)</value>
   </data>
   <data name="About" xml:space="preserve">
-    <value>À propos de {0}</value>
+    <value>About {0}</value>
   </data>
   <data name="RestartServer" xml:space="preserve">
-    <value>Redémarrer le serveur</value>
+    <value>Restart Server</value>
   </data>
   <data name="Close" xml:space="preserve">
-    <value>Quitter</value>
+    <value>Exit</value>
   </data>
   <data name="Configuration" xml:space="preserve">
     <value>Configuration</value>
@@ -173,10 +173,10 @@
     <value>..\Resources\RestartHS.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="RestartedServer" xml:space="preserve">
-    <value>Serveur redémarré</value>
+    <value>Restarted Server</value>
   </data>
   <data name="AboutBox" xml:space="preserve">
-    <value>Auteur : Stéphane Mitermite
+    <value>Author : Stéphane Mitermite
 Site web : http://freemiupnp.fr/</value>
   </data>
   <data name="WebPage" xml:space="preserve">
@@ -189,38 +189,38 @@ Site web : http://freemiupnp.fr/</value>
     <value>http://freemiupnp.fr/download.html</value>
   </data>
   <data name="NewVersionAvailableMessage" xml:space="preserve">
-    <value>Une nouvelle version de {0} est disponible ({1}). Vous possédez actuellement la version {2}.
-Souhaitez-vous consulter la page des téléchargements ?</value>
+    <value>A new version of {0} is available ({1}). You currently have version {2}.
+Do you want to visit the downloads page ?</value>
   </data>
   <data name="NewVersionAvailable" xml:space="preserve">
-    <value>Une nouvelle version est disponible !</value>
+    <value>New Version Available !</value>
   </data>
   <data name="IPv6Support" xml:space="preserve">
-    <value>Support de l'IPv6</value>
+    <value>IPv6 Support</value>
   </data>
   <data name="Delete" xml:space="preserve">
-    <value>Supprimer</value>
+    <value>Delete</value>
   </data>
   <data name="Edit" xml:space="preserve">
-    <value>Modifier</value>
+    <value>Edit</value>
   </data>
   <data name="FileExplorer" xml:space="preserve">
-    <value>Explorateur de fichiers</value>
+    <value>File Explorer</value>
   </data>
   <data name="Folder" xml:space="preserve">
-    <value>Dossier</value>
+    <value>Folder</value>
   </data>
   <data name="NetworkStream" xml:space="preserve">
-    <value>Flux réseau</value>
+    <value>Network Stream</value>
   </data>
   <data name="New" xml:space="preserve">
-    <value>Nouveau</value>
+    <value>New</value>
   </data>
   <data name="Podcast" xml:space="preserve">
     <value>Podcast</value>
   </data>
   <data name="ShutdownMenu" xml:space="preserve">
-    <value>Menu 'Arrêter l'ordinateur'</value>
+    <value>Menu 'Shut down computer'</value>
   </data>
   <data name="Audio" xml:space="preserve">
     <value>Audio</value>
@@ -229,36 +229,36 @@ Souhaitez-vous consulter la page des téléchargements ?</value>
     <value>Image</value>
   </data>
   <data name="MediaKind" xml:space="preserve">
-    <value>Type de média</value>
+    <value>Media Type</value>
   </data>
   <data name="Other" xml:space="preserve">
-    <value>Autre</value>
+    <value>Other</value>
   </data>
   <data name="Video" xml:space="preserve">
-    <value>Vidéo</value>
+    <value>Video</value>
   </data>
   <data name="FolderPath" xml:space="preserve">
-    <value>Chemin du dossier :</value>
+    <value>Folder Path :</value>
   </data>
   <data name="FolderLabel" xml:space="preserve">
-    <value>Libellé du dossier :</value>
+    <value>Folder Label :</value>
   </data>
   <data name="StreamAddress" xml:space="preserve">
-    <value>Adresse du flux :</value>
+    <value>Stream Address :</value>
   </data>
   <data name="StreamLabel" xml:space="preserve">
-    <value>Libellé du flux :</value>
+    <value>Stream Label :</value>
   </data>
   <data name="PodcastAddress" xml:space="preserve">
-    <value>Adresse du podcast :</value>
+    <value>Podcast Address :</value>
   </data>
   <data name="PodcastLabel" xml:space="preserve">
-    <value>Libellé du podcast :</value>
+    <value>Podcast Label :</value>
   </data>
   <data name="DeleteGestureText" xml:space="preserve">
     <value>Suppr.</value>
   </data>
   <data name="AllowDeletion" xml:space="preserve">
-    <value>Autoriser la suppression de fichiers (Freebox V5 uniquement)</value>
+    <value>Allow Deletion (Freebox V5 only)</value>
   </data>
 </root>
